@@ -34,7 +34,6 @@ import uk.gov.hmcts.reform.idam.client.models.UserInfo;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import static java.time.LocalDate.now;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -139,8 +138,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                 AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
                     .handle(params);
 
-                assertThat(getCaseData(response).getUpdateDetailsForm().getPartyChosen().getListItems().size()).isEqualTo(
-                    2);
+                assertThat(getCaseData(response).getUpdateDetailsForm().getPartyChosen().getListItems()).hasSize(2);
                 assertThat(getCaseData(response).getUpdateDetailsForm().getPartyChosen().getListItems().get(0).getLabel()).isEqualTo(
                     "Claimant");
                 assertThat(getCaseData(response).getUpdateDetailsForm().getPartyChosen().getListItems().get(1).getLabel()).isEqualTo(
@@ -158,8 +156,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                 AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
                     .handle(params);
 
-                assertThat(getCaseData(response).getUpdateDetailsForm().getPartyChosen().getListItems().size()).isEqualTo(
-                    2);
+                assertThat(getCaseData(response).getUpdateDetailsForm().getPartyChosen().getListItems()).hasSize(2);
                 assertThat(getCaseData(response).getUpdateDetailsForm().getPartyChosen().getListItems().get(0).getLabel()).isEqualTo(
                     "Claimant");
                 assertThat(getCaseData(response).getUpdateDetailsForm().getPartyChosen().getListItems().get(1).getLabel()).isEqualTo(
@@ -177,8 +174,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                 AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
                     .handle(params);
 
-                assertThat(getCaseData(response).getUpdateDetailsForm().getPartyChosen().getListItems().size()).isEqualTo(
-                    3);
+                assertThat(getCaseData(response).getUpdateDetailsForm().getPartyChosen().getListItems()).hasSize(3);
                 assertThat(getCaseData(response).getUpdateDetailsForm().getPartyChosen().getListItems().get(0).getLabel()).isEqualTo(
                     "Claimant");
                 assertThat(getCaseData(response).getUpdateDetailsForm().getPartyChosen().getListItems().get(1).getLabel()).isEqualTo(
@@ -198,8 +194,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                 AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
                     .handle(params);
 
-                assertThat(getCaseData(response).getUpdateDetailsForm().getPartyChosen().getListItems().size()).isEqualTo(
-                    2);
+                assertThat(getCaseData(response).getUpdateDetailsForm().getPartyChosen().getListItems()).hasSize(2);
                 assertThat(getCaseData(response).getUpdateDetailsForm().getPartyChosen().getListItems().get(0).getLabel()).isEqualTo(
                     "Claimants");
                 assertThat(getCaseData(response).getUpdateDetailsForm().getPartyChosen().getListItems().get(1).getLabel()).isEqualTo(
@@ -221,7 +216,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .fromDate(LocalDate.of(2020, 5, 2))
                 .toDate(LocalDate.of(2020, 6, 2))
                 .build()
-        ).collect(Collectors.toList());
+        ).toList();
 
         List<UnavailableDate> expectedNewDatesFromUnavailableDatesEvent = Stream.of(
             UnavailableDate.builder()
@@ -237,7 +232,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .dateAdded(issueDate)
                 .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                 .build()
-        ).collect(Collectors.toList());
+        ).toList();
 
         @BeforeEach
         void setup() {
@@ -298,7 +293,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .unavailableDateType(UnavailableDateType.SINGLE_DATE)
                             .date(LocalDate.of(2022, 5, 2))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -320,7 +315,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimantFullDefence()
@@ -355,7 +350,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .unavailableDateType(UnavailableDateType.SINGLE_DATE)
                             .date(LocalDate.of(2022, 5, 2))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -377,7 +372,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimantFullDefence()
@@ -417,7 +412,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .fromDate(LocalDate.of(2023, 8, 20))
                             .toDate(LocalDate.of(2023, 8, 22))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -446,7 +441,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimDetailsNotified()
@@ -484,7 +479,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -512,7 +507,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimantFullDefence()
@@ -656,7 +651,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .unavailableDateType(UnavailableDateType.SINGLE_DATE)
                             .date(LocalDate.of(2022, 5, 2))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -678,7 +673,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimantFullDefence()
@@ -758,7 +753,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .unavailableDateType(UnavailableDateType.SINGLE_DATE)
                             .date(LocalDate.of(2022, 5, 2))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -780,7 +775,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimantFullDefence()
@@ -828,7 +823,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .fromDate(LocalDate.of(2023, 8, 20))
                             .toDate(LocalDate.of(2023, 8, 22))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -857,7 +852,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimDetailsNotified()
